--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
 
   </head>
   <body>
-    <div class="container mx-auto pt-6">
+    <div class="container mx-auto md:pt-6">
       <header>
         <header
   class="border-t-8 border-x-8 border-black-top px-8 pt-6 flex justify-between">
